// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: {"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false} and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2 {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  margin: 0;
  color: #000;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2 {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2 {
    font-size: 1.75rem;
    line-height: 1.4285714286;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2 {
    font-size: 2rem;
    line-height: 1.375;
  }
}

@media(min-width:1760px) {
  h2 {
    font-size: 2.25rem;
    line-height: 1.3333333333;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: auto 0 0;
}
.btn {
  visibility: hidden;
  height: 0;
}
.btn:first-of-type {
  grid-column: 2;
}
.pagination {
  display: none;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #96989a;
}
.bullet--active {
  background: #000;
}
@media(min-width:480px) {
  .pagination {
    display: grid;
  }
}

@media(min-width:760px) {
  .header {
    grid-template-columns: auto min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    height: auto;
  }
  .pagination {
    display: none;
  }
}

@media(min-width:1000px) {
  .pagination {
    display: grid;
  }
}

@media(min-width:1300px) {
  .pagination {
    display: none;
  }
}

@media(min-width:1760px) {
  .pagination {
    display: grid;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: false and theme: dark 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2 {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  margin: 0;
  color: #fff;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2 {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2 {
    font-size: 1.75rem;
    line-height: 1.4285714286;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2 {
    font-size: 2rem;
    line-height: 1.375;
  }
}

@media(min-width:1760px) {
  h2 {
    font-size: 2.25rem;
    line-height: 1.3333333333;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: auto 0 0;
}
.btn {
  visibility: hidden;
  height: 0;
}
.btn:first-of-type {
  grid-column: 2;
}
.pagination {
  display: grid;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #7c7f81;
}
.bullet--active {
  background: #fff;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: auto min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    height: auto;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2 {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  margin: 0;
  color: #000;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2 {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2 {
    font-size: 1.75rem;
    line-height: 1.4285714286;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2 {
    font-size: 2rem;
    line-height: 1.375;
  }
}

@media(min-width:1760px) {
  h2 {
    font-size: 2.25rem;
    line-height: 1.3333333333;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: auto 0 0;
}
.btn {
  visibility: hidden;
  height: 0;
}
.btn:first-of-type {
  grid-column: 2;
}
.pagination {
  display: grid;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #96989a;
}
.bullet--active {
  background: #000;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: auto min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    height: auto;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: false, disablePagination: true and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2 {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  margin: 0;
  color: #000;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2 {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2 {
    font-size: 1.75rem;
    line-height: 1.4285714286;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2 {
    font-size: 2rem;
    line-height: 1.375;
  }
}

@media(min-width:1760px) {
  h2 {
    font-size: 2.25rem;
    line-height: 1.3333333333;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: auto 0 0;
}
.btn {
  visibility: hidden;
  height: 0;
}
.btn:first-of-type {
  grid-column: 2;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: auto min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    height: auto;
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: true, disablePagination: false and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2 {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  margin: 0;
  color: #000;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2 {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2 {
    font-size: 1.75rem;
    line-height: 1.4285714286;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2 {
    font-size: 2rem;
    line-height: 1.375;
  }
}

@media(min-width:1760px) {
  h2 {
    font-size: 2.25rem;
    line-height: 1.3333333333;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: auto 0 0;
  padding: 0 max(1rem, 7vw);
}
.btn {
  visibility: hidden;
  height: 0;
}
.btn:first-of-type {
  grid-column: 2;
}
.pagination {
  display: grid;
  grid-auto-columns: 8px;
  grid-auto-flow: column;
  justify-content: center;
  gap: 8px;
  height: 8px;
}
.bullet {
  border-radius: 4px;
  background: #96989a;
}
.bullet--active {
  background: #000;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: auto min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    height: auto;
  }
}

@media(min-width:1760px) {
  .header {
    padding: 0 min(calc(43vw - 39.6rem), 12rem);
  }
}
"
`;

exports[`getComponentCss() should return correct css for wrapHeading: true, disablePagination: true and theme: light 1`] = `
":host {
  display: grid !important;
  width: 100% !important;
  gap: 1.5rem !important;
  grid-auto-flow: row !important;
}
h2 {
  font: normal normal 600 1.25rem/1.4 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  text-size-adjust: none;
  -webkit-text-size-adjust: none;
  margin: 0;
  color: #000;
}
@media(min-width:760px) {
  :host {
    gap: 2.5rem !important;
  }
}

@media(min-width:760px) and (max-width:999px) {
  h2 {
    font-size: 1.5rem;
    line-height: 1.5;
  }
}

@media(min-width:1000px) and (max-width:1299px) {
  h2 {
    font-size: 1.75rem;
    line-height: 1.4285714286;
  }
}

@media(min-width:1300px) and (max-width:1759px) {
  h2 {
    font-size: 2rem;
    line-height: 1.375;
  }
}

@media(min-width:1760px) {
  h2 {
    font-size: 2.25rem;
    line-height: 1.3333333333;
  }
}

@media(min-width:1920px) {
  :host {
    gap: 3.875rem !important;
  }
}

.splide {
  position: relative;
  min-width: 0;
}
.splide__track {
  position: relative;
}
.splide__list {
  display: flex;
  height: 100%;
  backface-visibility: hidden;
}
.splide__slide {
  position: relative;
  box-sizing: border-box;
  flex-shrink: 0;
  backface-visibility: hidden;
}
.splide__sr {
  position: absolute;
  height: 1px;
  width: 1px;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
}
.splide__track--draggable {
  user-select: none;
  -webkit-touch-callout: none;
}
.header {
  display: grid;
  grid-template-columns: auto 0 0;
  padding: 0 max(1rem, 7vw);
}
.btn {
  visibility: hidden;
  height: 0;
}
.btn:first-of-type {
  grid-column: 2;
}
@media(min-width:760px) {
  .header {
    grid-template-columns: auto min-content min-content;
    align-items: end;
    gap: 0.5rem;
  }
  .btn {
    visibility: visible;
    height: auto;
  }
}

@media(min-width:1760px) {
  .header {
    padding: 0 min(calc(43vw - 39.6rem), 12rem);
  }
}
"
`;
